--- a/vignettes/rRMSAnalyzer.Rmd
+++ b/vignettes/rRMSAnalyzer.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "rRMSAnalyzer: package to analyze RiboMethSeq data"
-author: "Théo COMBE, Hermes PARAQINDES, Allyson MOUREAUX, Janice KIELBASSA, Fleur BOURDELAIS, Sébastien DURAND, Emilie THOMAS, Anthony FERRARI and Virginie MARCEL"
+author: "Théo COMBE, Hermès PARAQINDES, Allyson MOUREAUX, Janice KIELBASSA, Fleur BOURDELAIS, Sébastien DURAND, Emilie THOMAS, Anthony FERRARI and Virginie MARCEL"
 date: "`r format(Sys.Date(), '%m/%d/%Y')`"
 abstract: > 
   RiboMethSeq is an innovative RNAseq-based approach, which was developed in 2015 to analyze 2’O-ribose methylation (2’Ome) at all sites of ribosomal RNAs (rRNA) at once, in yeast [@birkedal2014]. This approach was then adapted to user customed rRNA using the Illumina technology [@Marchand2016; @Erales2017; @Marcel2021]. Concretely, 2'Ome methylation is the addition of a methyl group at the 2'position of the ribose in a ribosomal DNA site. A methylation at the n site protects the phosphodiester bond at the n+1 site from alkaline hydrolysis. Consequently, the cleavage does not appear homogeneously on all sites as expected when there is no methylation. The presence of 2'Ome at nucleotide n leads to under-representation of RNA fragments beginning at nucleotide n+1, and over-representation of RNA fragments ending at nucleotide n-1. This allows the detection of methylation and the measurement of the 2'Ome level, also known as the C-score. The C-score is computed for all DNA sites and can vary from 0 to 1 (Birkedal et al., 2014). A value of 0 indicates that no ribosomes are methylated at the position of interest, while a value of 1 indicates that all ribosomes are methylated. Heterogeneity of methylation is observed between 0 and 1. For example, a value of 0.5 indicates that half of the ribosomes in the experiment are methylated and half are not at the position of interest. <br> The rRMSAnalyzer package can be used for any kind of RNA and with all organisms. Human data is provided in the tool but other personal data can be uploaded. This package provides a set of user-friendly functions to (i) compute C-scores from RiboMethSeq read-end counts as input,(ii) perform quality control of the dataset, (iii) adjust batch effect with ComBat-Seq, and (iv) provide tools to visualize, analyze the data and provide a table with the annotated human rRNA sites and their C-scores (Paraqindes et al., 2023). Raw data processing to obtain read-end counts from sequencing data can be performed using our Nextflow pipeline [ribomethseq-nf](https://github.com/RibosomeCRCL/ribomethseq-nf), as already described [@Marchand2016].
