--- a/vignettes/rRMSAnalyzer.Rmd
+++ b/vignettes/rRMSAnalyzer.Rmd
@@ -2,8 +2,8 @@
 title: "rRMSAnalyzer: package to analyze RiboMethSeq data"
 author: "Théo COMBE, Hermès PARAQINDES, Allyson MOUREAUX, Janice KIELBASSA, Fleur BOURDELAIS, Sébastien DURAND, Emilie THOMAS, Anthony FERRARI and Virginie MARCEL"
 date: "`r format(Sys.Date(), '%m/%d/%Y')`"
-abstract: > 
-  RiboMethSeq is an innovative RNAseq-based approach, which was developed in 2015 to analyze 2’O-ribose methylation (2’Ome) at all sites of ribosomal RNAs (rRNA) at once, in yeast [@birkedal2014]. This approach was then adapted to user customed rRNA using the Illumina technology [@Marchand2016; @Erales2017; @Marcel2021]. Concretely, 2'Ome methylation is the addition of a methyl group at the 2'position of the ribose in a ribosomal DNA site. A methylation at the n site protects the phosphodiester bond at the n+1 site from alkaline hydrolysis. Consequently, the cleavage does not appear homogeneously on all sites as expected when there is no methylation. The presence of 2'Ome at nucleotide n leads to under-representation of RNA fragments beginning at nucleotide n+1, and over-representation of RNA fragments ending at nucleotide n-1. This allows the detection of methylation and the measurement of the 2'Ome level, also known as the C-score. The C-score is computed for all DNA sites and can vary from 0 to 1 (Birkedal et al., 2014). A value of 0 indicates that no ribosomes are methylated at the position of interest, while a value of 1 indicates that all ribosomes are methylated. Heterogeneity of methylation is observed between 0 and 1. For example, a value of 0.5 indicates that half of the ribosomes in the experiment are methylated and half are not at the position of interest. <br> The rRMSAnalyzer package can be used for any kind of RNA and with all organisms. Human data is provided in the tool but other personal data can be uploaded. This package provides a set of user-friendly functions to (i) compute C-scores from RiboMethSeq read-end counts as input,(ii) perform quality control of the dataset, (iii) adjust batch effect with ComBat-Seq, and (iv) provide tools to visualize, analyze the data and provide a table with the annotated human rRNA sites and their C-scores (Paraqindes et al., 2023). Raw data processing to obtain read-end counts from sequencing data can be performed using our Nextflow pipeline [ribomethseq-nf](https://github.com/RibosomeCRCL/ribomethseq-nf), as already described [@Marchand2016].
+abstract: >
+  RiboMethSeq is an innovative RNAseq-based approach, which was developed in 2015 to analyze 2’O-ribose methylation (2’Ome) at all sites of ribosomal RNAs (rRNA) at once, in yeast [@birkedal2014]. This approach was then transferred to human using the Illumina technology [@Marchand2016; @Erales2017; @Marcel2021]. Briefly, the presence of 2'Ome protects the phosphodiester bond located at the 3' of the 2'Ome nucleotide from alkaline hydrolysis. Thus, the presence of 2'Ome at the given nucleotide n induces under-representation of RNA fragments starting at the nucleotide n+1  and an over-representation of RNA fragments ending at the nucleotide n-1, allowing the extrapolation of 2'Ome levels at the corresponding nucleotide position n (or C-score) varying from 0 to 1 [@birkedal2014]. <br><br> The rRMSAnalyzer package can be used for any kind of RNA and with all organisms. This package provides a set of user-friendly functions to compute C-scores from RiboMethSeq read end counts as input, adjust batch effect with ComBat-Seq, visualize the data and provide a table with the annotated human rRNA sites and their C-scores. This package provides a set of user-friendly functions to (i) compute C-scores from RiboMethSeq read-end counts as input,(ii) perform quality control of the dataset, (iii) adjust batch effect with ComBat-Seq, and (iv) provide tools to visualize, analyze the data and provide a table with the annotated human rRNA sites and their C-scores (Paraqindes et al., 2023), (v) return automated QC and analytic reports. Raw data processing to obtain read-end counts from sequencing data can be performed using our Nextflow pipeline [ribomethseq-nf](https://github.com/RibosomeCRCL/ribomethseq-nf), as already described [@Marchand2016].
 output:
    rmarkdown::html_vignette:
       toc: true
@@ -51,9 +51,8 @@ The latest version of rRMSAnalyzer package can be installed from Github with :
 
 ```{r, eval = FALSE}
 devtools::install_github("RibosomeCRCL/rRMSAnalyzer")
-# devtools::install_github("RibosomeCRCL/rRMSReports")
 library(rRMSAnalyzer)
-# library(rRMSReports)
+library(rRMSReports)
 ```
 
 # Initial preparation of the dataset
@@ -143,7 +142,7 @@ To load both data and metadata, and store them in a RiboClass, the function *`lo
 The following example displays a call to *`load_ribodata()`*, with all parameters shown :
 
 ```{r}
-path <- system.file("extdata", package="rRMSAnalyzer")
+path <- system.file("extdata", package="rRMSAnalyzer") #change for your path
 
 ribo <- load_ribodata(
                       #data & metadata files path
@@ -256,7 +255,7 @@ report_qc(ribo = ribo_toy, library_col = "run")
 
 The QC report includes the following visualizations:
 
-- read-end counts distribution by sample (*`boxplot_count()`*)
+- Read-end counts distribution by sample (*`boxplot_count()`*)
 - Relative log coverage (i.e., end read count) by sample (*`plot_rlc()`*)
 - rRNA fraction of read-end counts per sample (*`plot_count_fraction()`*)
 - Heatmap summarizing the correlation matrix of the read-end counts (*`heatmap_annotated()`*)
@@ -265,41 +264,41 @@ The QC report includes the following visualizations:
 
 ### Correlation matrix {-}
 
-To get outlier annotation on the heatmap, *`get_outliers()`* function has to be used. This function compute all outliers of the experiment returning a data frame as a summary used in the *`plot_heatmap_annotated()`*
+To add outlier annotations on the heatmap, *`get_outliers()`* function must be used. This function computes all the outliers identified in the QC and returns a data frame summary for use in *`plot_heatmap_annotated()`*
 
-```{r}
-qcdata <- rRMSAnalyzer::get_outliers(ribo)
-```
+Here is an example of correlation matrix with outlier identification: 
 
 ```{r, fig.asp = 0.9, fig.width = 7 ,fig.height=12}
+qcdata <- rRMSAnalyzer::get_outliers(ribo)
 plot_heatmap_annotated(ribo, qcdata)
 ```
 
-### Output of the quality control report {-}
+### Output of the QC report {-}
 
-```{r}
-output_dir <- getwd()
-```
+Information issued from the QC report can be return as followed:
 
-To save the output: 
-```{r, eval = FALSE}
-write.table(qcdata,file.path(output_dir,"quality_control.csv"),sep="\t",row.names=FALSE,quote = FALSE)
-```
+Here is an example of QC output: 
 
-To display the output:
 ```{r, warning=FALSE}
+output_dir <- getwd()
+# To display the output
 knitr::kable(qcdata, "html") %>% kable_styling("striped") %>% scroll_box(width = "100%", height = "500px")
+```
+
+```{r, eval = FALSE}
+# To save the output
+write.table(qcdata,file.path(output_dir,"quality_control.csv"),sep="\t",row.names=FALSE,quote = FALSE)
 ```
 
 ### Comments {-}
 
-To add some comments in the Comments section of the report, a Rmarkdown file has to be created and saved in the working directory. Path to this report has to be given in the comments argument of the function to be included in the final report. 
+A Comments section is available in the QC report to add some personal comments. To do so, a Rmarkdown file should be created and saved in the working directory. Then, path to this report should be given in the *comments* argument of the *`report_qc()`* function. 
 
 ```{r, eval = FALSE}
 report_qc(ribo = ribo, specie = "human", library_col = "run", comments = "./path/to/comment_QC.Rmd")
 ```
 
-Below an example of comment file in rmd extension that can be copied and pasted in an rmd file:
+Example of comments in rmd extension
 
 ```{r, eval = FALSE, echo = TRUE, asis = TRUE}
 ```{=html} 
@@ -315,28 +314,25 @@ Below an example of comment file in rmd extension that can be copied and pasted 
     border-radius: 5px;
   }
 </style>
-``` #
+``` # erase this '#' and this sentence
 <details>
 
-  <summary><b> ℹ Comments on the report  </b></summary>
-  <div markdown="1">
+<summary><b> ℹ Comments on the report  </b></summary>
+<div markdown="1">
 <p>
 Text can be entered from here ...
 
 Subtitle can be added with '##' symbol:
 
-## 2.1 Level 2 title {-} #this symbol {-} avoid continue the numbering of the table of content
-
-Some text.
-## 2.2 Level 2 title {-}
-
-Some texte again. Sub sub title can be added with '###' symbol:
-
-## 2.2.1 Level 3 title {-}
+## 5.3 Level 2 title {-} #this symbol {-} avoid continue the numbering of the table of content
 
 ...to here. Those last 2 lines below must be kept. They are usefull for the layout.
 </div>
 </details>
+  
+#copy/past in an rmd file
+#apply in the report_qc() function
+#report_qc(ribo = ribo….)
 ```
 
 ## Batch effect 
@@ -467,7 +463,7 @@ The rRMSAnalyzer package calculates a C-score for each genomic position of the r
 
 ### Included annotation : Human 2'Ome rRNA sites {-}
 
-By default, rRMSAnalyzer package includes two dataframes containing the positions and the annotations of the human rRNA 2’Ome sites:
+By default, rRMSAnalyzer package includes three dataframes containing the positions and the annotations of the human rRNA 2’Ome sites:
 
 -   human_methylated: a dataframe, containing the 112 known 2'Ome sites for the human rRNAs.
 
@@ -514,22 +510,26 @@ Note : rRMSAnalyzer will display a warning message when there is a mismatch betw
 
 This vignette also provides some explanations on how to create your own sites annotation dataset with [Customize 2'Ome sites annotations].
 
-## Analysis design
+## Analysis design for multiple comparisons
 
-If you planned to run functions from the *diff_sites* report (see [Site-by-site comparison of 2'Ome levels report]), this section needs to be considered. 
-If you have several experimental designs of condition that you want to compare individually, this section part (1) has to be considered before using functions of / generate *2ome_analysis* report (see [2'Ome profiling report]). 
+Although comparison of two groups can be computed using the analytic report functions (e.g., report_2ome_sites or report_diff_sites – (see [Site-by-site comparison of 2'Ome levels report])) thanks to the “condition” column of the metadata, this section needs to be considered to perform multiple comparisons (i.e., more than 2 groups). The following section Addition of new columns in the metadata  is required for the two reports while the section Comparison table is required for report_diff_sites only. 
 
-### Comparison table and supplementary metadata columns {-}
+### Addition of new columns in the metadata {-}
 
-(1) The metadata are in the RiboClass object after its creation. It allows us to create "copy" of the RiboClass but with a subset of the samples. An example has been created to help you define the structure of the columns you need to create.
-Note: To change metadata, change the metadata file used to create the RiboClass (see [How to load the data]) and create it once again with the function *load_ribodata()*. 
+To perform multiple group comparison, the metadata needs to be implemented with additional information on the experimental conditions in order to create as much as novel Riboclass required to perform all the comparison. The metadata are stored in the RiboClass object once it has been created. 
+To change the metadata, (i) amend the metadata csv.file used to create the RiboClass (see [How to load the data]) and (ii) recreate the RiboClass using the *`load_ribodata()`* function.
 
-In this example there is 3 experimental conditions named A, B, C. <br>
-- VariableA (9 samples)  has 1 control and 2 cases (P1 and P2) with 3 replicates for each. <br>
-- VariableB (4 samples) has 1 control and 1 case (P2) with 2 replicates for each. <br>
-- VariableC (6 samples) has 1 control and 1 case (P2) with 3 replicates for each. <br>
+Here is an example:
 
-In the case we want to explore differences within each experimental conditions between case and control we need to create 3 supplementary columns that will define samples to compare. Then, we will be able to use each new 3 Riboclass in the 2ome_analysis report and the diff_sites report (thus, generate each report 3 times). We start with an example of metadata as below (metadata in the initial RiboClass):
+The study includes 3 experimental conditions termed "variable A to C" (e.g., wild-type, mutation 1, mutation 2) that has been exposed to another condition termed "ctrl, P1 and P2" (e.g., untreated vs treatment with 2 different concentrations). All these experimental conditions have been performed in replicates termed "N". In summary, it includes:
+
+- VariableA (9 samples)  has 1 control (ctrl) and 2 cases (P1 and P2) with 3 replicates for each (total = 9 samples). <br>
+- VariableB (4 samples) has 1 control (ctrl) and 1 case (P2) with 2 replicates for each (total = 4 samples). <br>
+- VariableC (6 samples) has 1 control (ctrl) and 1 case (P2) with 3 replicates for each (total = 6 samples). <br>
+
+(i) Update of the metadata .csv file
+
+->>> Here is the initial metadata in the RiboClass:
 
 +-----------------------+----------------------+-------------+-----------+-----+
 | filename              | samplename           | condition   | treatment | lib |
@@ -573,7 +573,8 @@ In the case we want to explore differences within each experimental conditions b
 | S45_R1.5_counts.csv   | variableA_N3_P2      | variableA   | P2        | L2  |
 +-----------------------+----------------------+-------------+-----------+-----+
 
-To analyse each condition we add some columns. The metadata now, contain 3 supplementary columns "variableA", "variableB", "variableC" that define our experimental design to analyse individually:
+->>> A simple way to format the metadata is to add three columns, one for each experimental condition (i.e., termed “variable A to C” in this example) in which the second experimental condition is implemented (i.e., termed “ctrl, P1, P2” in this example). <br>
+Here is an example of the first design of the novel metadata:
 
 +-----------------------+----------------------+-----------+-----------+-----------+-------------+-----------+-----+
 | filename              | samplename           | variableA | variableB | variableC | condition   | treatment | lib |
@@ -617,7 +618,8 @@ To analyse each condition we add some columns. The metadata now, contain 3 suppl
 | S45_R1.5_counts.csv   | variableA_N3_P2      | P2        | NA        | NA        | variableA   | P2        | L2  |
 +-----------------------+----------------------+-----------+-----------+-----------+-------------+-----------+-----+
 
-We can imagine another design where we want to compare all P2 cases vs. all control. In this case we will create a new column "comp1" for example with all P2 and all ctrl (if they are biologically the same) and NA for P1 samples.
+->>> If the analysis includes comparison of 2 conditions independently of the other (e.g., all ctrl vs all P2), the addition of a single column is required (i.e., “comp1” in this example).<br>
+Here is an example of the second design of the novel metadata:
 
 +-----------------------+----------------------+-------+-----------+-----------+-----+
 | filename              | samplename           | comp1 | condition | treatment | lib |
@@ -661,14 +663,15 @@ We can imagine another design where we want to compare all P2 cases vs. all cont
 | S45_R1.5_counts.csv   | variableA_N3_P2      | P2    | variableA | P2        | L2  |
 +-----------------------+----------------------+-------+-----------+-----------+-----+
 
-If we want to compare P1 and P2 vs. ctrl, we need to create a new column where P1 and P2 have a new common name. We can imagine "P" for P1 and P2 samples that we will compared to ctrl. 
+->>> If the analysis includes comparison of a pool of 2 conditions independently of the other (e.g., all ctrl vs all P1+P2), the addition of a single column is required (i.e., “comp1” in this example) with a new annotation (i.e., "P" = P1 or P2).<br>
+Here is an example of the third design of the novel metadata:
 
 +-----------------------+----------------------+-------+-----------+-----------+-----+
 | filename              | samplename           | comp1 | condition | treatment | lib |
 +=======================+======================+=======+===========+===========+=====+
 | S26_R1.5_counts.csv   | variableB_N2_P2      | P     | variableB | P2        | L2  |
 +-----------------------+----------------------+-------+-----------+-----------+-----+
-| S27_R1.5_counts.csv   | variableA_N2_P1      | P1    | variableA | P1        | L2  |
+| S27_R1.5_counts.csv   | variableA_N2_P1      | P     | variableA | P1        | L2  |
 +-----------------------+----------------------+-------+-----------+-----------+-----+
 | S28_R1.5_counts.csv   | variableC_N1_ctrl    | ctrl  | variableC | ctrl      | L2  |
 +-----------------------+----------------------+-------+-----------+-----------+-----+
@@ -676,7 +679,7 @@ If we want to compare P1 and P2 vs. ctrl, we need to create a new column where P
 +-----------------------+----------------------+-------+-----------+-----------+-----+
 | S31_R1.5_counts.csv   | variableC_N2_P2      | P     | variableC | P2        | L2  |
 +-----------------------+----------------------+-------+-----------+-----------+-----+
-| S32_R1.5_counts.csv   | variableA_N3_P1      | P1    | variableA | P1        | L2  |
+| S32_R1.5_counts.csv   | variableA_N3_P1      | P     | variableA | P1        | L2  |
 +-----------------------+----------------------+-------+-----------+-----------+-----+
 | S33_R1.5_counts.csv   | variableA_N3_ctrl    | ctrl  | variableA | ctrl      | L2  |
 +-----------------------+----------------------+-------+-----------+-----------+-----+
@@ -694,7 +697,7 @@ If we want to compare P1 and P2 vs. ctrl, we need to create a new column where P
 +-----------------------+----------------------+-------+-----------+-----------+-----+
 | S40_R1.5_counts.csv   | variableB_N1_ctrl    | ctrl  | variableB | ctrl      | L2  |
 +-----------------------+----------------------+-------+-----------+-----------+-----+
-| S41_R1.5_counts.csv   | variableA_N1_P1      | P1    | variableA | P1        | L2  |
+| S41_R1.5_counts.csv   | variableA_N1_P1      | P     | variableA | P1        | L2  |
 +-----------------------+----------------------+-------+-----------+-----------+-----+
 | S42_R1.5_counts.csv   | variableA_N1_ctrl    | ctrl  | variableA | ctrl      | L2  |
 +-----------------------+----------------------+-------+-----------+-----------+-----+
@@ -705,9 +708,15 @@ If we want to compare P1 and P2 vs. ctrl, we need to create a new column where P
 | S45_R1.5_counts.csv   | variableA_N3_P2      | P     | variableA | P2        | L2  |
 +-----------------------+----------------------+-------+-----------+-----------+-----+
 
-(2) The comparison table is a dataframe containing all the biological comparisons to perform during the report diff_site. This one is to be created by a piece of code (below).   
+(ii) create a new Riboclass:
 
-Here is an example of a comparison table for two comparisons (case of variableA analysis): 
+```{r, eval=FALSE}
+ribo_exp_design <- load_ribodata(count_path = ..., metadata = "./new_metadata.csv")
+```
+
+### Comparison table {-}
+
+To perform automated multiple group comparison in the *`report_diff_sites`* function, a dataframe containing all the biological comparisons should be prepared. This dataframe is created using the code provided below and including in a new RiboClass created using the *`load_ribodata()`* function and the argument comparison.
 
 +-----------+------------+------------+
 | comp      | ctrl       | cases      |
